[package]
name = "async-map"
version = "0.1.1"
authors = ["Tobias Grasl <toby@meliorbis.com>"]
edition = "2018"
description = "A rarely-locking, shared map for Rust."
homepage = "https://github.com/herblet/async-map"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
im = "15.0.0"
futures = "0.3.15"

[dev-dependencies]
criterion = {version = "0.3.4", features = ["async_tokio"]}

[[bench]]
name = "async_map_benchmark"
harness = false
