[package]
name = "async-map"
version = "0.1.1"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2018"
description = "A rarely-locking, shared map for Rust."
homepage = "https://github.com/herblet/async-map"
license = "MIT"

[dependencies]
tokio = { version = "1.5", features = ["full"] }
im = "15.0.0"
futures = "0.3.15"

[dev-dependencies]
criterion = {version = "0.3.4", features = ["async_tokio"]}

[[bench]]
name = "async_map_benchmark"
harness = false
